package com.zym.pattern.builder;

import lombok.Data;
import lombok.ToString;

/**
 * @author zhouyumeng
 * @date 2021/12/29
 **/
@Data
@ToString
public class House {

    private String basic;

    private String wall;

    private String roof;

}
