@startuml
'https://plantuml.com/class-diagram

class House{
    basic: String
    wall: String
    roof: String
}
interface HouseBuilder{
    house: House = new House()
    buildBasic(): void
    buildWall(): void
    roofed(): void
    getResult(): House
}
class CommonHouseBuilder{
    buildBasic(): void
    buildWall(): void
    roofed(): void
}
class HighBuildingBuilder{
    buildBasic(): void
    buildWall(): void
    roofed(): void
}
class HouseDirector{
    construct(): House
}

HouseBuilder *-- House
HouseBuilder <|-- CommonHouseBuilder
HouseBuilder <|-- HighBuildingBuilder
HouseDirector *-- HouseBuilder

@enduml